# tiny_python_projects

./: README_MINE.md  nopullcommit.sh  pyproject.toml
01_hello/: hello01_print.py
