[tool.poetry]
name = "tiny_python_projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.950"
pylint = "^2.13.8"
pytest = "^7.1.2"
yapf = "^0.32.0"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
style = "pep8"
based_on_style = "flake8"
spaces_before_comment = 4
split_before_logical_operator = true

